[gd_scene load_steps=5 format=3 uid="uid://dojnxectq8khj"]

[ext_resource type="Script" uid="uid://45n0hpbaaybi" path="res://example.gd" id="1_2jas5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6gkck"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_2jas5"]
sky_material = SubResource("ProceduralSkyMaterial_6gkck")

[sub_resource type="Environment" id="Environment_n51mc"]
background_mode = 2
sky = SubResource("Sky_2jas5")
tonemap_mode = 2

[node name="Example" type="Node3D"]
script = ExtResource("1_2jas5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n51mc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
alignment = 1

[node name="LoadSceneButton" type="Button" parent="Control/HBoxContainer"]
visible = false
layout_mode = 2
text = "Load Scene"

[node name="AddSceneButton" type="Button" parent="Control/HBoxContainer"]
visible = false
layout_mode = 2
text = "Add Node"

[node name="LoadNormalButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Load Normal Resource"

[node name="AddNormalButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Add Node from Normal Resource"

[node name="LoadSafeButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Load Safe Resource"

[node name="AddSafeButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Add Node from Safe Resource"

[node name="Button" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -128.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "In the Godot Editor, go to the Debugger and select the Monitors tab. Enable the Static Max Memory, Resources, Video Memory, and Buffer Memory monitors. Observe how much they increase when you load the resource and then add the resource to the scene. In the Output tab you'll also see how quickly the resource is loaded compared to how quickly the Node is added to the scene.

Notice how much longer it takes longer to load the Normal Resource than it does to load the Safe Resource, and how much more memory is used, even before adding anything to the scene."
autowrap_mode = 3

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.3405)

[connection signal="pressed" from="Control/HBoxContainer/LoadSceneButton" to="." method="_on_load_scene_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/AddSceneButton" to="." method="_on_add_scene_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/LoadNormalButton" to="." method="_on_load_normal_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/AddNormalButton" to="." method="_on_add_normal_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/LoadSafeButton" to="." method="_on_load_safe_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/AddSafeButton" to="." method="_on_add_safe_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Button" to="." method="_on_button_pressed"]
